# cookie-project-template

./: .gitignore  cookiecutter.json  pyproject.toml
project/: noxfile.py  pyproject.toml
tests/: conftest.py  test_nox.py  utils.py
{{cookiecutter.project_name}}/: noxfile.py  pyproject.toml
{{cookiecutter.project_name}}/.devcontainer/: Dockerfile  devcontainer.json
{{cookiecutter.project_name}}/docker/: Dockerfile
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/: __main__.py
