[tool.poetry]
name = "cookie-project-template"
version = "0.1.0"
description = ""
authors = ["Jakob Jul Elben <jelben@deloitte.dk>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.5"
cookiecutter = "^1.7.3"
pytest-cookies = "^0.6.1"
pytest-xdist = "^2.5.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
