[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.project_version}}"
description = "{{cookiecutter.project_decription}}"
authors = ["Jakob Jul Elben <jelben@deloitte.dk>"]
packages = [{include = "src/{{cookiecutter.project_name}}"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
nox = "^2021.10.1"
nox-poetry = "^0.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
