[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.project_version}}"
description = "{{cookiecutter.project_description}}"
authors = ["Jakob Jul Elben <jelben@deloitte.dk>"]
packages = [{include = "{{cookiecutter.project_slug}}"}]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
black = {extras = ["jupyter"], version = "^21.12b0"}
pytest = "^6.2.5"
mypy = "^0.930"
isort = "^5.10.1"
pytest-xdist = {extras = ["psutil"], version = "^2.5.0"}
flake8 = "^4.0.1"
mkdocs = "^1.2.3"
mkdocs-material = "^8.1.4"
pre-commit = "^2.16.0"
pytest-cov = "^3.0.0"
nox = "^2021.10.1"
nox-poetry = "^0.9.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
